# Rostadler

./: .env.example  Cargo.toml  rustfmt.toml
src/: events.rs  main.rs
src/commands/: leet.rs  manage.rs  mod.rs  offtopic.rs  teamspeak.rs
src/util/: mod.rs  teamspeak.rs  twitter.rs
