[package]
name = "rostadler"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
serenity = { version = "0.12.1", default-features = false, features = [
    "cache",
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
poise = "0.6.1"
tokio = { version = "1.24.2", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
chrono = "0.4"
regex = "1.6.0"
anyhow = "1.0.68"
ts3 = "0.4.1"
async-trait = "0.1.64"
